Fix overflow on button

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ button {
     padding: 0px;
     width: 100%;
     box-sizing: border-box;
+    overflow: hidden;
 }
 
 button:hover {
